dbeaver/pro#3419 Fix several completion bugs